--- a/03-counter-app/src/index.css
+++ b/03-counter-app/src/index.css
@@ -6,3 +6,9 @@ html, body{
     font-size: 1.1rem;
     padding: 70px;
 }
+
+button{
+    padding: 10px;
+    font-size: 1.3rem;
+    margin-right: 10px;
+}
