--- a/03-counter-app/src/index.css
+++ b/03-counter-app/src/index.css
@@ -11,4 +11,7 @@ button{
     padding: 10px;
     font-size: 1.3rem;
     margin-right: 10px;
+    background-color: rgb(30, 255, 0);
+    border-radius: 10px;
+    border-color: rgb(0, 17, 255);
 }
