--- a/04-gif-expert-app/src/index.css
+++ b/04-gif-expert-app/src/index.css
@@ -6,8 +6,32 @@ body {
     padding: 60px;
 }
 
-input{
+input {
     color: grey;
     width: 100%;
     font-size: 1.2rem;
+}
+
+.card-grid {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.card {
+    align-content: center;
+    border: 1px solid grey;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    overflow: hidden;
+}
+
+.card p {
+    padding: 5px;
+    text-align: center;
+}
+
+.card img {
+    max-height: 170px;
 }
